--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,12 +2,19 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}WeatherMan{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="stylesheet" type="text/css" href="{{ asset('assets/bootstrap.min.css') }}" />
     </head>
     <body>
-        {% block body %}{% endblock %}
+
+    <div class="container">
+        {% block body %}
+            Remplacez-moi
+        {% endblock %}
+    </div>
+
         {% block javascripts %}{% endblock %}
     </body>
 </html>
