--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,7 +10,7 @@
     <body>
 
     <div class="container">
-        {% block body %}
+        {% block _body %}
             Remplacez-moi
         {% endblock %}
     </div>
