--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -5,4 +5,5 @@
         <h1>Page en construction</h1>
         <span>Revenez plus tard.</span>
     </div>
+    <a href="{{ path('fos_user_security_login') }}"
 {% endblock %}
