--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -1,9 +1,37 @@
 {% extends '@App/base.html.twig' %}
 
 {% block body %}
-    <div class="jumbotron">
-        <h1>Page en construction</h1>
-        <span>Revenez plus tard.</span>
-    </div>
-    <a href="{{ path('fos_user_security_login') }}"
+
+    <h1>Mes stations météos</h1>
+    {% if weatherStations|length > 0 %}
+        <table class="table table-bordered">
+            <tr>
+                <th>Nom de la station</th>
+                <th>Température</th>
+                <th>Humidité</th>
+                <th>Pression</th>
+                <th>Actualisé</th>
+            </tr>
+            {% for station in weatherStations %}
+                <tr>
+                    <td>{{ station.name }}</td>
+                    {% if weatherDatas[station.pin] is null %}
+                        <td>Aucune données</td>
+                        <td>Aucune données</td>
+                        <td>Aucune données</td>
+                        <td>Aucune données</td>
+                    {% else %}
+                        <td>{{ weatherDatas[station.pin].temperature }} °C</td>
+                        <td>{{ weatherDatas[station.pin].humidity }}%</td>
+                        <td>{{ weatherDatas[station.pin].pression }} kPa</td>
+                        <td>{{ weatherDatas[station.pin].updateTime|date('Y-m-d H:i:s') }}</td>
+                    {% endif %}
+                </tr>
+            {% endfor %}
+        </table>
+    {% else %}
+        <span>Vous n'avez aucune station météo</span>
+    {% endif %}
+
+
 {% endblock %}
