API: Update station info

--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -23,7 +23,7 @@
                     {% else %}
                         <td>{{ weatherDatas[station.pin].temperature }} °C</td>
                         <td>{{ weatherDatas[station.pin].humidity }}%</td>
-                        <td>{{ weatherDatas[station.pin].pression }} kPa</td>
+                        <td>{{ weatherDatas[station.pin].pressure }} kPa</td>
                         <td>{{ weatherDatas[station.pin].updateTime|date('Y-m-d H:i:s') }}</td>
                     {% endif %}
                 </tr>
