--- a/src/AppBundle/Resources/views/Navbar/topbar.html.twig
+++ b/src/AppBundle/Resources/views/Navbar/topbar.html.twig
@@ -14,6 +14,19 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sujets<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Proposition de recherche</a></li>
+                        <li><a href="#">Acquisition des connaissances</a></li>
+                        <li><a href="#">Démarche expérimentale</a></li>
+                        <li><a href="#">Difficultés rencontrées</a></li>
+                        <li><a href="#">Résultats de la recherche</a></li>
+                        <li><a href="#">Conclusion et bilan</a></li>
+                        <li><a href="#">Bibliographie et téléchargement</a></li>
+                    </ul>
+                </li>
+
                 {% if app.user %}
                     <li><a href="{{ path('fos_user_security_logout') }}">{{ app.user.username }}</a></li>
                 {% elseif not app.user %}
