--- a/src/AppBundle/Resources/views/Navbar/topbar.html.twig
+++ b/src/AppBundle/Resources/views/Navbar/topbar.html.twig
@@ -17,13 +17,13 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sujets<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Proposition de recherche</a></li>
-                        <li><a href="#">Acquisition des connaissances</a></li>
-                        <li><a href="#">Démarche expérimentale</a></li>
-                        <li><a href="#">Difficultés rencontrées</a></li>
-                        <li><a href="#">Résultats de la recherche</a></li>
-                        <li><a href="#">Conclusion et bilan</a></li>
-                        <li><a href="#">Bibliographie et téléchargement</a></li>
+                        <li><a href="{{ path('app_proposition') }}">Proposition de recherche</a></li>
+                        <li><a href="{{ path('app_acquisition_connaissances') }}">Acquisition des connaissances</a></li>
+                        <li><a href="{{ path('app_demarche_experimentale') }}">Démarche expérimentale</a></li>
+                        <li><a href="{{ path('app_difficultes') }}">Difficultés rencontrées</a></li>
+                        <li><a href="{{ path('app_resultats_recherche') }}">Résultats de la recherche</a></li>
+                        <li><a href="{{ path('app_conclusion_bilan') }}">Conclusion et bilan</a></li>
+                        <li><a href="{{ path('app_bibliographie') }}">Bibliographie et téléchargement</a></li>
                     </ul>
                 </li>
 
