--- a/src/AppBundle/Resources/views/Navbar/topbar.html.twig
+++ b/src/AppBundle/Resources/views/Navbar/topbar.html.twig
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sujets<span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Publications<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="{{ path('app_proposition') }}">Proposition de recherche</a></li>
                         <li><a href="{{ path('app_acquisition_connaissances') }}">Acquisition des connaissances</a></li>
